# slicer-profile-bridge

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  sync-upstream.yml
docs/: schema.md
scripts/: sync_upstream.py
src/slicer_profile_bridge/: __init__.py  heuristics.py  inherit.py  loader.py  schema.py
src/slicer_profile_bridge/translators/: README.md  __init__.py  bambu.py  orca.py  prusa.py
tests/: test_bambu.py  test_heuristics.py  test_orca.py  test_prusa.py  test_schema.py
tests/fixtures/: BAMBU_ATTRIBUTION.md  ORCA_ATTRIBUTION.md  PRUSA_ATTRIBUTION.md
